examples/cilium-header-based/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canary-service
  template:
    metadata:
      labels:
        app: canary-service
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0
          args:
          - "-text=Hello from $(POD_NAME)"
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stable-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stable-service
  template:
    metadata:
      labels:
        app: stable-service
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0
          args:
          - "-text=Hello from $(POD_NAME)"
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
