examples/cilium-header-based/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gamma-http-route
  namespace: default
spec:
  hostnames:
  - dummy  # does not count in GAMMA GatewayAPI yet, see https://github.com/kubernetes-sigs/gateway-api/issues/2885
  parentRefs:
    - group: ""
      name: parent-service
      kind: Service
      port: 80
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: stable-service
          port: 80
          weight: 100
        - group: ""
          kind: Service
          name: canary-service
          port: 80
          weight: 0
      matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - group: ""
          kind: Service
          name: canary-service
          port: 80
          weight: 0
      matches:
        - headers:
            - name: X-Canary
              type: Exact
              value: test
          path:
            type: PathPrefix
            value: /
